feat: updating naming

--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "@acme/expo",
+  "name": "@stackk/expo",
   "version": "0.1.0",
   "private": true,
   "main": "index.ts",
   "scripts": {
+    "android": "expo run:android",
     "clean": "git clean -xdf .cache .expo .turbo android ios node_modules",
     "dev": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
+    "ios": "expo run:ios",
     "lint": "eslint",
     "typecheck": "tsc --noEmit"
   },
+  "prettier": "@stackk/prettier-config",
   "dependencies": {
     "@better-auth/expo": "1.2.9",
     "@expo/metro-config": "^0.20.14",
@@ -44,20 +45,19 @@
     "superjson": "2.2.2"
   },
   "devDependencies": {
-    "@acme/api": "workspace:*",
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tailwind-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@babel/runtime": "^7.27.4",
+    "@stackk/api": "workspace:*",
+    "@stackk/eslint-config": "workspace:*",
+    "@stackk/prettier-config": "workspace:*",
+    "@stackk/tailwind-config": "workspace:*",
+    "@stackk/tsconfig": "workspace:*",
     "@types/babel__core": "^7.20.5",
     "@types/react": "catalog:react19",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
-  },
-  "prettier": "@acme/prettier-config"
+  }
 }
