--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/nextjs",
+  "name": "@stackk/nextjs",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -14,11 +14,11 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@acme/api": "workspace:*",
-    "@acme/auth": "workspace:*",
-    "@acme/db": "workspace:*",
-    "@acme/ui": "workspace:*",
-    "@acme/validators": "workspace:*",
+    "@stackk/api": "workspace:*",
+    "@stackk/auth": "workspace:*",
+    "@stackk/db": "workspace:*",
+    "@stackk/ui": "workspace:*",
+    "@stackk/validators": "workspace:*",
     "@t3-oss/env-nextjs": "^0.13.6",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
@@ -31,10 +31,10 @@
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tailwind-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
+    "@stackk/eslint-config": "workspace:*",
+    "@stackk/prettier-config": "workspace:*",
+    "@stackk/tailwind-config": "workspace:*",
+    "@stackk/tsconfig": "workspace:*",
     "@types/node": "^22.15.29",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
@@ -45,5 +45,5 @@
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@stackk/prettier-config"
 }
