--- a/apps/expo/tsconfig.json
+++ b/apps/expo/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@acme/tsconfig/base.json"],
+  "extends": ["@stackk/tsconfig/base.json"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
