--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/tailwind-config",
+  "name": "@stackk/tailwind-config",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -20,13 +20,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
+    "@stackk/eslint-config": "workspace:*",
+    "@stackk/prettier-config": "workspace:*",
+    "@stackk/tsconfig": "workspace:*",
     "@types/node": "^22.15.29",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@stackk/prettier-config"
 }
