--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@stackk/tsconfig/internal-package.json",
-  "include": ["src"],
+  "include": ["src", "./src/index.js"],
   "exclude": ["node_modules"]
 }
