--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -30,7 +30,7 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.10.0",
+    "@libsql/client": "^0.15.9",
     "drizzle-orm": "^0.44.1",
     "drizzle-zod": "^0.8.2",
     "zod": "catalog:"
