style: updated tailwind

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,7 +11,7 @@
   },
   "aliases": {
     "utils": "@stackk/ui",
-    "components": "src/",
-    "ui": "src/"
+    "components": "./src/",
+    "ui": "./src/"
   }
 }
