--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@
 # If you are cloning this repo, create a copy of this file named `.env` and populate it with your secrets.
 
 # The database URL is used to connect to your Supabase database.
-POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?workaround=supabase-pooler.vercel"
+TURSO_AUTH_TOKEN="some-auth-token"
+TURSO_CONNECTION_URL="https://your-database.turso.io"
 
 
 # You can generate the secret via 'openssl rand -base64 32' on Unix
