--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,15 +8,20 @@ catalog:
   tailwindcss: ^3.4.15
   typescript: ^5.8.3
   zod: ^3.25.49
-  "@tanstack/react-query": ^5.80.7
-  "@trpc/client": ^11.4.0
-  "@trpc/tanstack-react-query": ^11.4.0
-  "@trpc/server": ^11.4.0
+  '@tanstack/react-query': ^5.80.7
+  '@trpc/client': ^11.4.0
+  '@trpc/tanstack-react-query': ^11.4.0
+  '@trpc/server': ^11.4.0
 catalogs:
   react19:
     react: 19.0.0
     react-dom: 19.0.0
-    "@types/react": ^19.1.6
-    "@types/react-dom": ^19.1.5
+    '@types/react': ^19.1.6
+    '@types/react-dom': ^19.1.5
+ignoredBuiltDependencies:
+  - bufferutil
+  - core-js-pure
+  - utf-8-validate
 onlyBuiltDependencies:
   - esbuild
+  - sharp
