--- a/turbo.json
+++ b/turbo.json
@@ -46,7 +46,8 @@
     }
   },
   "globalEnv": [
-    "POSTGRES_URL",
+    "TURSO_AUTH_TOKEN",
+    "TURSO_CONNECTION_URL",
     "AUTH_DISCORD_ID",
     "AUTH_DISCORD_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
