--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -22,6 +22,7 @@
     "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "pnpm studio",
+    "dev:next": "pnpm studio",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "push": "pnpm with-env drizzle-kit push",
