--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -22,6 +22,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@stackk/db": "workspace:*",
     "@stackk/eslint-config": "workspace:*",
     "@stackk/prettier-config": "workspace:*",
     "@stackk/tsconfig": "workspace:*",
