fix(arch): fix envs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
       "mode": "auto"
     }
   ],
-  "conventionalCommits.scopes": ["be:routers", "be:db", "fe"]
+  "conventionalCommits.scopes": ["be:routers", "be:db", "fe", "arch"]
 }
