--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.9",
+    "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.44.1",
     "drizzle-zod": "^0.8.2",
     "zod": "catalog:"
