--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -8,7 +8,8 @@
       "~/*": ["./src/*"]
     },
     "plugins": [{ "name": "next" }],
-    "module": "esnext"
+    "module": "esnext",
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
