--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -19,6 +19,7 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
+    "minimatch": "^10.0.3",
     "zod": "catalog:"
   },
   "devDependencies": {
