--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -34,6 +34,7 @@
     "expo-status-bar": "2.2.3",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "14.1.6",
+    "minimatch": "^10.0.3",
     "nativewind": "~4.1.23",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
