--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -23,6 +23,7 @@
     "@stackk/db": "workspace:*",
     "@t3-oss/env-nextjs": "^0.13.6",
     "better-auth": "1.2.9",
+    "minimatch": "^10.0.3",
     "next": "^15.3.3",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
