--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -35,6 +35,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.44.1",
     "drizzle-zod": "^0.8.2",
+    "minimatch": "^10.0.3",
     "zod": "catalog:"
   },
   "devDependencies": {
