--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.0.0-rc.1",
     "eslint-plugin-turbo": "^2.5.4",
+    "minimatch": "^10.0.3",
     "typescript-eslint": "^8.33.1"
   },
   "devDependencies": {
