--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "minimatch": "^10.0.3",
     "prettier": "catalog:",
     "prettier-plugin-tailwindcss": "^0.6.12"
   },
