--- a/tooling/prettier/tsconfig.json
+++ b/tooling/prettier/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@stackk/tsconfig/base.json",
   "include": ["."],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
