--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "minimatch": "^10.0.3",
     "postcss": "^8.5.4",
     "tailwindcss": "catalog:",
     "tailwindcss-animate": "^1.0.7"
