--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -2,4 +2,7 @@
   "extends": "@stackk/tsconfig/internal-package.json",
   "include": ["src"],
   "exclude": ["node_modules"],
+  "compilerOptions": {
+    "jsx": "react-jsx"
+  }
 }
