--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@stackk/tsconfig/base.json",
   "include": ["src", "*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "jsx": "react-jsx"
+  }
 }
