--- a/apps/expo/tsconfig.json
+++ b/apps/expo/tsconfig.json
@@ -7,7 +7,7 @@
     },
     "jsx": "react-native",
     "checkJs": false,
-    "moduleSuffixes": [".ios", ".android", ".native", ""],
+    "moduleSuffixes": [".ios", ".android", ".native", ""]
   },
   "include": [
     "src",
