--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,20 +4,20 @@ packages:
   - tooling/*
 
 catalog:
-  '@tanstack/react-query': ^5.80.7
-  '@trpc/client': ^11.4.0
-  '@trpc/server': ^11.4.0
-  '@trpc/tanstack-react-query': ^11.4.0
+  "@tanstack/react-query": ^5.80.7
+  "@trpc/client": ^11.4.0
+  "@trpc/server": ^11.4.0
+  "@trpc/tanstack-react-query": ^11.4.0
   eslint: ^9.28.0
-  prettier: ^3.6.2
+  prettier: ^3.5.3
   tailwindcss: 4.1.11
   typescript: ^5.8.3
   zod: ^3.25.49
 
 catalogs:
   react19:
-    '@types/react': ^19.1.6
-    '@types/react-dom': ^19.1.5
+    "@types/react": ^19.1.6
+    "@types/react-dom": ^19.1.5
     react: 19.1.0
     react-dom: 19.1.0
 
@@ -27,6 +27,6 @@ ignoredBuiltDependencies:
   - utf-8-validate
 
 onlyBuiltDependencies:
-  - '@tailwindcss/oxide'
+  - "@tailwindcss/oxide"
   - esbuild
   - sharp
