--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
     "dev": {
       "dependsOn": ["^dev"],
       "cache": false,
-      "persistent": false
+      "persistent": false,
+      "interactive": true
     },
     "format": {
       "outputs": [".cache/.prettiercache"],
@@ -52,7 +53,8 @@
     "AUTH_GOOGLE_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
     "AUTH_SECRET",
-    "PORT"
+    "PORT",
+    "RESEND_API_KEY"
   ],
   "globalPassThroughEnv": [
     "NODE_ENV",
