feat: a LOT of updates to the main app

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,9 +18,10 @@
     "@stackk/api": "workspace:*",
     "@stackk/auth": "workspace:*",
     "@stackk/db": "workspace:*",
+    "@stackk/transactional": "workspace:*",
     "@stackk/ui": "workspace:*",
     "@stackk/validators": "workspace:*",
-    "@t3-oss/env-nextjs": "^0.13.6",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
