--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -8,7 +8,7 @@
       "~/*": ["./src/*"]
     },
     "plugins": [{ "name": "next" }],
-    "module": "esnext",
+    "module": "esnext"
   },
   "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
