--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "android": "expo run:android",
     "clean": "git clean -xdf .cache .expo .turbo android ios node_modules",
-    "dev": "expo start",
+    "dev": "",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
@@ -23,7 +23,7 @@
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
-    "better-auth": "1.2.12",
+    "better-auth": "1.3.1",
     "expo": "53.0.9",
     "expo-constants": "17.1.6",
     "expo-dev-client": "5.1.8",
